# ReceiverChanges

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fionera/background/: BackgroundActivity.kt  NotifyActivity.kt  TargetActivity.kt
app/src/main/java/com/fionera/bottomsheet/: BottomSheetActivity.kt  ScreenUtil.java  TextViewOutline.kt
app/src/main/java/com/fionera/compose/: ComposePreviewActivity.kt
app/src/main/java/com/fionera/elevation/: ElevationActivity.kt
app/src/main/java/com/fionera/foldable/: ViewUtil.java  WindowMetricsActivity.kt
app/src/main/java/com/fionera/motionlayout/: MotionActivity.kt
app/src/main/java/com/fionera/player/: PlayerActivity.kt
app/src/main/java/com/fionera/receiverchanges/: MainActivity.kt  ReceiverActivity.kt
app/src/main/res/drawable/: shape_gradient_black.xml  shape_yellow_corner100.xml
app/src/main/res/layout/: activity_background.xml  activity_bottom_sheet.xml  activity_elevation.xml  activity_main.xml  activity_motion.xml  activity_motion_end.xml  activity_player.xml  activity_receiver.xml  activity_window_metrics.xml  dialog_bottom_sheet_test.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
buildSource/: build.gradle
core/: build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/res-included/layout/: layout_title.xml
gradle/wrapper/: gradle-wrapper.properties
radar/: build.gradle
radar/src/main/: AndroidManifest.xml
radar/src/main/cpp/: CMakeLists.txt  radar.cpp
radar/src/main/cpp/media/: one_frame.h  player.cpp  player.h
radar/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decoder.h
radar/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
radar/src/main/cpp/media/render/video/: video_render.h
radar/src/main/cpp/media/render/video/native_render/: native_render.cpp  native_render.h
radar/src/main/cpp/util/: logger.h  timer.c
radar/src/main/java/com/radar/: FfmpegVersion.kt  NativeLib.kt
(+17 files in other folders)
